k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hpa-nodejs
    app.kubernetes.io/name: nodejs
  name: hpa-nodejs
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hpa-nodejs
  template:
    metadata:
      labels:
        app: hpa-nodejs
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/hpa-nodejs/hpa-nodejs:latest
        imagePullPolicy: Always
        name: hpa-nodejs
        resources:
          requests:
            memory: 50Mi
            cpu: 200m
          limits:
            memory: 250Mi
        livenessProbe:
          httpGet:
            path: /probes/liveness
            port: 8080
            scheme: HTTP
          timeoutSeconds: 1
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /probes/readiness
            port: 8080
            scheme: HTTP
          timeoutSeconds: 1
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
