k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hpa-nodejs
  name: hpa-nodejs
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
    name: web
  selector:
    app: hpa-nodejs
  type: ClusterIP
